<?xml version="1.0" encoding="utf-8"?>
    <!--登录界面,用LinearLayout-->
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@mipmap/ic_launcher"
android:orientation="vertical"
tools:context="com.xx.Shopping.android.test.LoginActivity">
<!--文本框-->
    <TextView
        android:id="@+id/kf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kf_name"
        android:layout_marginTop="8dp"
        android:layout_gravity="end"
        android:textColor="#000000"
        android:textSize="14sp"
        />
<!--标题栏-->
<include layout="@layout/main_title_bar">

</include>
<!--显示头像，记得加入id iv_head -->
    <ImageView
        android:id="@+id/iv_head"
        android:layout_width="99dp"
        android:layout_height="73dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/img" />
    <!--输入框-->
<EditText
    android:id="@+id/et_user_name"
    android:layout_width="fill_parent"
    android:layout_height="48dp"
    android:layout_marginTop="35dp"
    android:layout_marginLeft="35dp"
    android:layout_marginRight="35dp"
    android:layout_gravity="center_horizontal"

    android:drawableLeft="@drawable/add"
    android:drawablePadding="10dp"
    android:paddingLeft="8dp"
    android:gravity="center_vertical"
    android:hint="@string/user_name"
    android:singleLine="true"
    android:textColor="#000000"
    android:textColorHint="#631b0c"
    android:textSize="14sp"/>

<!--输入框-->
<EditText
    android:id="@+id/et_psw"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginLeft="35dp"
    android:layout_marginRight="35dp"

    android:drawableLeft="@drawable/add"
    android:drawablePadding="10dp"
    android:paddingLeft="8dp"
    android:gravity="center_vertical"
    android:hint="@string/pwd_name"
    android:inputType="textPassword"

    android:textColor="#000000"
    android:textColorHint="#631b0c"
    android:textSize="14sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<!--按钮-->
<Button
    android:id="@+id/btn_login"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginTop="15dp"
    android:layout_marginLeft="35dp"
    android:layout_marginRight="35dp"
    android:layout_gravity="center_horizontal"

    android:text="@string/ok_name"
    android:textColor="#000000"
    android:textSize="18sp"/>
    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/no_name"
        android:textColor="#000000"
        android:textSize="18sp"
        />
    </LinearLayout>
<!--显示tv register , find_psw -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="35dp"
    android:layout_marginRight="35dp"
    android:gravity="center_horizontal"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/zc_name"
        android:textColor="#000000"
        android:textSize="14sp" />
    <!--layout_weight="1" layout_width="0dp"实现均分效果-->
    <TextView
        android:id="@+id/tv_find_psw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/wj_name"
        android:textColor="#000000"
        android:textSize="14sp" />
</LinearLayout>
</LinearLayout>

