<?xml version="1.0" encoding="utf-8"?>
<!--商品详情页用 RelativeLayout  -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.xx.Shopping.android.test.FirstActivity">
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout">
            <!--商品图片设置  -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/one"
                />
        </RelativeLayout>
    <!--滚动视图设置  -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <android.support.v4.view.ViewPager
                        android:id="@+id/viewPager"
                        android:layout_width="match_parent"
                        android:layout_height="100dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <!--商品图片设置  -->
                        <ImageView
                            android:id="@+id/iv_first"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginLeft="130dp"
                            android:src="@drawable/one"/>
                        <ImageView
                            android:id="@+id/iv_two"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/two"/>
                        <ImageView
                            android:id="@+id/iv_three"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/three"/>
                        <ImageView
                            android:id="@+id/iv_four"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/four"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">
                        <!--商品图片设置  -->
                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/img"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <!--商品设置  -->
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="#000000"
                                android:text="@string/sp_name"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="280dp"
                                android:text="@string/share_name"
                                android:textColor="#22ffee"/>
                        </LinearLayout>
                    </LinearLayout>
                    <!--商品属性设置  -->
                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginLeft="70dp"
                        android:text="@string/sx_name"
                        android:textSize="20dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <!--商品属性设置  -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:text="@string/hh_name"
                            android:textSize="15dp"
                            android:textColor="#39186c"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <!--商品属性设置  -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:paddingLeft="20dp"
                                android:text="@string/price_name"
                                android:textColor="#39186c"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text= "@string/hy_name"
                                android:textColor="#39186c"/>

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="#eeeeee">
            <!--按钮类  -->
            <Button
                android:id="@+id/btn_buy"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:background="#ff3355"
                android:text="@string/buy_name" />

            <Button
                android:id="@+id/btn_shopping_cart"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_toLeftOf="@+id/btn_buy"
                android:background="#ff7722"
                android:text="@string/add_name" />
        </RelativeLayout>

    </RelativeLayout>
