<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.xx.Shopping.android.test.SecondActivity">
        <!--           添加购物车选择颜色属性部分                   -->

        <LinearLayout
            android:id="@+id/ll_add_shopping_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#55000000"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <!--空白背景部分-->
            <LinearLayout
                android:id="@+id/ll_transparent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

            </LinearLayout>
            <!--选择属性部分-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:orientation="vertical">

                <!--图片价格部分-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="#ffffff"
                    android:layout_weight="3">


                    <ImageView
                        android:id="@+id/i1"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/one" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sp_name"
                        android:background="#ffffff"
                        android:layout_toRightOf="@+id/i1"
                        android:layout_toEndOf="@+id/i1"
                        android:layout_marginTop="24dp" />


                </RelativeLayout>
                <!--颜色尺寸购买数量部分-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7"
                    android:background="#ffffff"
                    android:orientation="vertical">
                    <!--颜色分类-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.98"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:paddingTop="10dp"
                            android:text="@string/fl_name"
                            android:textColor="#000000"
                            android:textSize="18dp" />

                        <GridView
                            android:id="@+id/gridView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:layout_below="@+id/tvv"
                            android:columnWidth="80dp"
                            android:horizontalSpacing="5dp"
                            android:verticalSpacing="10dp"
                            android:numColumns="auto_fit">

                        </GridView>

                    </LinearLayout>

                    <!--购买数量部分-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:clickable="true"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="right|center_vertical"
                            android:orientation="horizontal"
                            android:paddingRight="20dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingLeft="15dp"
                                android:text="@string/sl_name"
                                android:textColor="#000000"
                                android:textSize="18dp"

                                />

                            <Button
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/js_name"
                                android:textSize="22dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="20dp"
                                android:text="@string/ms_name" />

                            <Button
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/ss_name"
                                android:textSize="22dp" />
                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="3">

                            <Button
                                android:id="@+id/button"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:layout_alignParentBottom="true"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:background="#ff0000"
                                android:gravity="center"
                                android:onClick="buttonClick"
                                android:text="@string/select_name"
                                android:textColor="#ffffff"
                                android:textSize="16dp" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>
